feat: Added the option for the collector to add receipt information
